# WhaleWhisper

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: app_factory.py  main.py
backend/app/api/: agent.py  asr.py  engine_schemas.py  llm.py  memory.py  plugins.py  provider_catalog_schemas.py  providers.py  routes.py  tts.py
backend/app/core/: events.py  http_utils.py  settings.py
backend/app/extensions/: __init__.py  ext_catalogs.py  ext_cors.py  ext_engines.py  ext_logging.py
backend/app/services/: event_dispatcher.py  session_store.py  ws_hub.py
backend/app/services/agents/: __init__.py  handlers.py  types.py  utils.py
backend/app/services/catalogs/: __init__.py  plugin_catalog.py  provider_catalog.py
backend/app/services/engines/: __init__.py  health.py  loader.py  registry.py  runtime_store.py  types.py
backend/app/services/memory/: __init__.py  service.py  session_buffer.py  settings.py  sqlite_store.py  store.py  summarizer.py  types.py
backend/app/services/providers/: asr.py  llm.py  registry.py  tts.py  types.py
backend/config/: engines.yaml  plugins.yaml  providers.yaml
backend/examples/: README.md  custom_agent_service.py
backend/scripts/: build-exe.ps1  run_backend.py  ws_smoke_test.py
frontend/: README.md  package.json  (+1 more)
frontend/apps/desktop-tauri/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
frontend/apps/desktop-tauri/src-tauri/capabilities/: default.json
frontend/apps/desktop-tauri/src-tauri/src/: backend.rs  commands.rs  debug_tools.rs  main.rs  tray.rs  window_effects.rs
(+56 files in other folders)
