[package]
name = "whalewhisper-desktop"
version = "0.1.0"
description = "WhaleWhisper Desktop"
authors = ["WhaleWhisper"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = { version = "0.5", features = ["unstable_grab"] }
url = "2"
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse"] }

[features]
cargo-clippy = []
